# fica

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  cbindgen.toml
examples/functions/: CMakeLists.txt  functions.cpp
include/: capi.h  contrast.h  fastica.h  fica.h  whitening.h  winexport.h
include/c/: fica.h
include/cpp/: fica.h
scripts/: make-linux.sh  make-win.bat
src/: capi.cpp  contrast.cpp  contrast.rs  data.rs  fastICA.jl  fastica.cpp  fastica.rs  lib.rs  test.ipynb  utils.rs  whitening.cpp  whitening.rs
src/.ipynb_checkpoints/: test-checkpoint.ipynb
src/contrast/: mod.rs
src/cpp/: capi.cpp  contrast.cpp  fastica.cpp
src/ffi/: data.rs  fastica.rs  ffi_fastica.rs  ffi_utils.rs  ffi_whitening.rs  matrix.rs  mod.rs  util.rs  utils.rs  whitening.rs
src/headers/: contrast.h
test/: CMakeLists.txt  tests.cpp
